# Social-Security--EPP-2023--Zecca-Lorenzo

./: CITATION  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: proj_ss.tex  refs.bib  table_results.tex  task_paper.py
src/proj_ss/: config.py
src/proj_ss/analysis/: task_analysis.py  task_plot.py  task_plot_eff.py  task_steady_states.py
src/proj_ss/analysis/age_eff/: task_analysis.py  task_plot_eff.py
src/proj_ss/analysis/plot_results/: task_plot.py
src/proj_ss/analysis/steady_states/: task_steady_states.py  task_z_plot.py
src/proj_ss/data_management/: __init__.py  task_data_management.py  task_import_data.py
src/proj_ss/final/: __init__.py  task_final.py
src/proj_ss/paper/: task_paper.py
tests/: test_SS.py  test_predict.py  test_save_clean_data.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
