[metadata]
name = proj_ss
description = Macroeconomic consequences of eliminating social security in the US
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lorezecca99/proj_ss
author = Lorenzo Zecca
author_email = s78lzecc@uni-bonn.de
license = Not open source
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Not open source License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/lorezecca99/proj_ss
    Documentation = https://github.com/lorezecca99/proj_ss
    Github = https://github.com/lorezecca99/proj_ss
    Tracker = https://github.com/lorezecca99/proj_ss/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/proj_ss/_version.py
